# Esp32-projects

./: .cproject  .project  README.md  sdkconfig
hc-ssd_dist_project/main/: CMakeLists.txt
main/: main.c
rfid_accesible_control/: .cproject  .project  sdkconfig  sdkconfig.old
rfid_accesible_control/main/: CMakeLists.txt  idf_component.yml  main.c
